crates/dag-macros/tests/ui/workflow_if_invalid_key.stderr
error: if_! requires `selector_pointer = "/json/pointer"`
  --> tests/ui/workflow_if_invalid_key.rs:40:9
   |
40 |         pointer = "/ok",
   |         ^^^^^^^
